--- a/tracky-cli/Cargo.toml
+++ b/tracky-cli/Cargo.toml
@@ -5,4 +5,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"]}
+serde_json = "1.0"
+uuid = { version = "1.18.1", features = ["v4"] }
 walkdir = "2.5"
